force-app/main/default/objects/CalSAWS_Program__c/CalSAWS_Program__c.object-meta.xml
<CustomObject>
    <label>CalSAWS Program</label>
    <nameField>
        <label>CalSAWS Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalSAWS Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>