force-app/main/default/objects/CalSAWS_Program__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CalSAWS Programs</relationshipLabel>
    <relationshipName>CalSAWS_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>