force-app/main/default/objects/CalSAWS_Program__c/fields/Program_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Begin_Date__c</fullName>
    <label>Program Begin Date</label>
    <type>Date</type>
</CustomField>