force-app/main/default/objects/CalSAWS_Program__c/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <label>Program Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>