force-app/main/default/objects/CalSAWS_Program__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <label>Program Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>