force-app/main/default/objects/CalSAWS_Program__c/fields/Program_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Program_Status_Reason__c</fullName>
    <label>Program Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>