force-app/main/default/objects/CalSAWS_Program__c/fields/Redetermination_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Redetermination_Due_Date__c</fullName>
    <label>Redetermination Due Date</label>
    <type>Date</type>
</CustomField>