force-app/main/default/objects/CalSAWS_Program__c/fields/Worker_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Worker_Begin_Date__c</fullName>
    <label>Worker Begin Date</label>
    <type>Date</type>
</CustomField>