force-app/main/default/objects/CalSAWS_Program__c/fields/Worker_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Worker_End_Date__c</fullName>
    <label>Worker End Date</label>
    <type>Date</type>
</CustomField>