force-app/main/default/objects/CalSAWS_Program__c/fields/Worker_Number__c.field-meta.xml
<CustomField>
    <fullName>Worker_Number__c</fullName>
    <label>Worker Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>